--- a/WEB APP/index.html
+++ b/WEB APP/index.html
@@ -15,14 +15,14 @@
   <header>
     <div class="logo-text">
 
-      <a href="#">YUVRAJ SINGH CHAUHAN</a>
+      <a href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SAMRUDHI PUNJE&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
     </div>
     <button class="cta" id="nav-btn" herf="#">GET USERS</button>
   </header>
-  <center><h2> DATABASE </h2><br>
+  <h2> USER - DATABASE </h2><br>
     <section class="cards" id="cards">
     </section>
-  </center>
+  
   <script src="script.js"></script>
 </body>
 </html>
